--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,10 @@ spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
+spring.datasource.initialization-mode=always
 spring.database.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/bento
 spring.datasource.username=postgres
 spring.datasource.password=root
 server.port=8080
-spring.datasource.data=data.sql
+spring.datasource.data=src/main/resources/data.sql
